# bool-diary

./: README.en.md  README.md  flet.pubspec_overrides.yaml  pyproject.toml
src/: api_request.py  diary_detail_view.py  diary_editor_view.py  login_view.py  main.py  main_view.py  material_colors.py  search_diary_view.py  search_result_view.py  tag_manage_view.py
src/common/: diary_type_manager.py  singleton_list.py
src/components/: custom_text_field.py
utils/: bool-diary.desktop  build_deb.sh
